# Project-Management

./: .gitignore  db.sqlite3  pyproject.toml
Account/: apps.py  authentication.py  forms.py  models.py  serializers.py  signal.py  urls.py  views.py
Account/management/commands/: add_user_group.py  create_perm.py  create_user.py
Account/migrations/: 0001_initial.py  0002_customuser_role_userprofile.py  0003_customuser_mssv.py  0004_customuser_group.py  0005_customuser_groups_customuser_user_permissions.py  0006_remove_customuser_group.py  0007_userprofile_is_deleted.py  0008_alter_userprofile_address_alter_userprofile_bio_and_more.py  0009_alter_userprofile_address_alter_userprofile_bio_and_more.py
Account/templates/: home.html  login.html  register.html
Project/: middleware.py  models.py  pagination_project.py  permission.py  searchbase.py  serializer.py  views.py
Project/management/commands/: create_group.py  create_perm.py
Project/migrations/: 0001_initial.py  0002_alter_project_research_field.py  0002_rename_research_field_project_researchfield.py  0003_alter_project_file.py  0004_alter_project_file.py  0005_project_feedbacktext_project_feedback_by.py  0006_alter_project_feedbacktext_alter_project_feedback_by.py
ProjectManagement/: asgi.py  settings.py  urls.py  wsgi.py
api/: urls.py
core/response/: get_or_404.py
core/shared/: pagination_project.py
core/utils/: utilsmodel.py
media/projects/files/: 1745258021_765269_Tổng hợp bài tập nhóm (1).docx  1745305124_608109_Tổng hợp bài tập nhóm.docx
