[project]
name = "my-django-backend-projectmanagement"
version = "0.1.0"
description = "Django backend for mu project"
authors = [
    {name = "AnhQuan29112004",email = "namcaodidong2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==5.2)",
    "django-cors-headers (==4.7.0)",
    "djangorestframework (==3.16.0)",
    "djangorestframework-simplejwt (==5.5.0)",
    "pillow (==11.1.0)",
    "pymysql (==1.1.1)",
    "python-decouple (==3.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
